--- a/src/GUI/AffichPerfEquipe.fxml
+++ b/src/GUI/AffichPerfEquipe.fxml
@@ -1,29 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AffichPerfEquipeController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="800.0" styleClass="right-bar" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AffichPerfEquipeController">
    <children>
-      <Label fx:id="id_victoires" layoutX="207.0" layoutY="133.0" text="nom" />
-      <Label layoutX="124.0" layoutY="160.0" text="défaites:" textAlignment="CENTER" />
-      <Label layoutX="123.0" layoutY="133.0" text="victoires:" />
-      <Label fx:id="id_defaites" layoutX="205.0" layoutY="160.0" text="Label" />
-      <Label layoutX="143.0" layoutY="193.0" text="nuls:" />
-      <Label layoutX="149.0" layoutY="107.0" text="id:" />
-      <Label fx:id="id" layoutX="205.0" layoutY="107.0" text="Label" />
-      <Label fx:id="id_nuls" layoutX="205.0" layoutY="193.0" text="Label" />
-      <Label layoutX="85.0" layoutY="39.0" text="Affichage Performance Equipe" textAlignment="CENTER">
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="99.0" layoutY="221.0" text="but marque:" />
-      <Label fx:id="id_but_marque" layoutX="205.0" layoutY="221.0" text="Label" />
-      <Label layoutX="95.0" layoutY="248.0" text="but encaisses:" />
-      <Label fx:id="id_but_encaisses" layoutX="205.0" layoutY="248.0" text="Label" />
-      <Button layoutX="274.0" layoutY="297.0" mnemonicParsing="false" onAction="#Close" text="Close" />
+      <AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-radius: 70;" styleClass="linear-grad">
+         <children>
+            <AnchorPane layoutX="328.0" layoutY="126.0" prefHeight="309.0" prefWidth="335.0" style="-fx-background-radius: 20;" styleClass="right-bar">
+               <children>
+                  <Label layoutX="28.0" layoutY="12.0" text="id:" textFill="WHITE" />
+                  <Label fx:id="id" layoutX="111.0" layoutY="13.0" text="Label" textFill="WHITE" />
+                  <Label layoutX="28.0" layoutY="44.0" text="victoires:" textFill="WHITE" />
+                  <Label fx:id="id_victoires" layoutX="113.0" layoutY="44.0" text="nom" textFill="WHITE" />
+                  <Label layoutX="22.0" layoutY="75.0" text="défaites:" textAlignment="CENTER" textFill="WHITE" />
+                  <Label fx:id="id_defaites" layoutX="112.0" layoutY="77.0" text="Label" textFill="WHITE" />
+                  <Label layoutX="25.0" layoutY="108.0" text="nuls:" textFill="WHITE" />
+                  <Label fx:id="id_nuls" layoutX="108.0" layoutY="109.0" text="Label" textFill="WHITE" />
+                  <Label layoutX="8.0" layoutY="143.0" text="but marque:" textFill="WHITE" />
+                  <Label fx:id="id_but_marque" layoutX="108.0" layoutY="143.0" text="Label" textFill="WHITE" />
+                  <Label layoutX="5.0" layoutY="186.0" text="but encaisses:" textFill="WHITE" />
+                  <Label fx:id="id_but_encaisses" layoutX="109.0" layoutY="188.0" text="Label" textFill="WHITE" />
+                  <Button layoutX="276.0" layoutY="263.0" mnemonicParsing="false" onAction="#Close" styleClass="add-btn" text="Close" />
+               </children>
+            </AnchorPane>
+            <AnchorPane prefHeight="602.0" prefWidth="215.0" styleClass="right-bar" />
+            <Pane layoutX="464.0" layoutY="14.0" prefHeight="112.0" prefWidth="302.0" style="-fx-background-radius: 20 20 0 0;" styleClass="linear-grad" stylesheets="@fullpackstyling.css">
+               <children>
+                  <Label layoutX="21.0" layoutY="14.0" text="Admin" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="112.0" fitWidth="71.0" layoutX="217.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@IMG/coach.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Pane layoutX="274.0" layoutY="95.0" prefHeight="31.0" prefWidth="190.0" style="-fx-background-radius: 20 20 0 0;" styleClass="linear-grad" stylesheets="@fullpackstyling.css">
+               <children>
+                  <Label layoutX="14.0" layoutY="2.0" prefHeight="17.0" prefWidth="221.0" text="Affichage Equipe" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+         </children>
+      </AnchorPane>
    </children>
+   <stylesheets>
+      <URL value="@fullpackstyling.css" />
+      <URL value="@adminaddcompetition.css" />
+   </stylesheets>
 </AnchorPane>
