--- a/src/GUI/AjoutEquipe.fxml
+++ b/src/GUI/AjoutEquipe.fxml
@@ -1,29 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AjoutEquipeController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="800.0" styleClass="right-bar" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AjoutEquipeController">
    <children>
-      <Button layoutX="439.0" layoutY="85.0" mnemonicParsing="false" onAction="#AddPicture" text="ajouter logo" />
-      <ImageView fx:id="imgV" fitHeight="150.0" fitWidth="200.0" layoutX="379.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true" />
-      <TextField fx:id="txtNom" layoutX="81.0" layoutY="72.0" promptText="nom" />
+      <AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-radius: 70;" styleClass="linear-grad">
+         <children>
+            <AnchorPane prefHeight="600.0" prefWidth="209.0" styleClass="right-bar" />
+            <AnchorPane layoutX="288.0" layoutY="165.0" prefHeight="257.0" prefWidth="351.0" style="-fx-background-radius: 20;" styleClass="right-bar">
+               <children>
+                  <TextField fx:id="txtNom" layoutX="27.0" layoutY="13.0" promptText="nom" style="-fx-background-radius: 20;" />
+                  <TextField fx:id="nbJoueur" layoutX="27.0" layoutY="50.0" promptText="nombre joueurs" style="-fx-background-radius: 20;" text="11" />
+                  <TextField fx:id="txtOrigin" layoutX="27.0" layoutY="88.0" promptText="origine" style="-fx-background-radius: 20;" />
+                  <Button layoutX="71.0" layoutY="140.0" mnemonicParsing="false" onAction="#ajouter" styleClass="add-btn1" text="valider" />
+                  <Button layoutX="185.0" layoutY="199.0" mnemonicParsing="false" onAction="#AddPicture" styleClass="add-btn1" text="ajouter logo" />
+               </children>
+               <stylesheets>
+                  <URL value="@fullpackstyling.css" />
+                  <URL value="@adminaddcompetition.css" />
+               </stylesheets>
+            </AnchorPane>
+            <ImageView fx:id="imgV" fitHeight="150.0" fitWidth="200.0" layoutX="619.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true" />
+            <Pane layoutX="441.0" layoutY="53.0" prefHeight="112.0" prefWidth="302.0" style="-fx-background-radius: 20 20 0 0;" styleClass="linear-grad" stylesheets="@fullpackstyling.css">
+               <children>
+                  <Label layoutX="21.0" layoutY="14.0" text="Admin" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="112.0" fitWidth="71.0" layoutX="217.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@IMG/coach.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Pane layoutX="272.0" layoutY="136.0" prefHeight="31.0" prefWidth="190.0" style="-fx-background-radius: 20 20 0 0;" styleClass="linear-grad" stylesheets="@fullpackstyling.css">
+               <children>
+                  <Label layoutX="14.0" layoutY="1.0" prefHeight="17.0" prefWidth="221.0" text="Ajout Equipe" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+         </children>
+      </AnchorPane>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-      <TextField fx:id="nbJoueur" layoutX="82.0" layoutY="112.0" promptText="nombre joueurs" text="11" />
-      <TextField fx:id="txtOrigin" layoutX="82.0" layoutY="153.0" promptText="origine" />
-      <Text layoutX="232.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ajout Equipe">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Text>
       <Label fx:id="l1" layoutX="268.0" layoutY="76.0" text="" textFill="RED" />
       <Label fx:id="l2" layoutX="268.0" layoutY="116.0" text="" textFill="RED" />
       <Label fx:id="l3" layoutX="268.0" layoutY="157.0" text="" textFill="RED" />
-      <Button layoutX="130.0" layoutY="211.0" mnemonicParsing="false" onAction="#ajouter" text="valider" />
    </children>
+   <stylesheets>
+      <URL value="@fullpackstyling.css" />
+      <URL value="@adminaddcompetition.css" />
+   </stylesheets>
 </AnchorPane>
