--- a/src/GUI/FXMLDocument.fxml
+++ b/src/GUI/FXMLDocument.fxml
@@ -1,37 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="509.0" prefWidth="1020.0" style="-fx-background-color: #1d3557;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="800.0" styleClass="linear-grad" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.FXMLDocumentController">
     <children>
         <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
     <Pane layoutX="209.0" layoutY="14.0" prefHeight="264.0" prefWidth="290.0" style="-fx-background-color: white;">
        <children>
         
-           <Label layoutX="59.0" layoutY="89.0" text="Nom : " />
-           <Label layoutX="59.0" layoutY="130.0" text="Surface:" />
-           <Label layoutX="59.0" layoutY="175.0" text="Adresse : " />
-           <Label layoutX="59.0" layoutY="200.0" text="Image : " />
-           <TextField fx:id="txtn" layoutX="123.0" layoutY="85.0" />
-           <TextField fx:id="txtp" layoutX="123.0" layoutY="126.0" />
-           <TextField fx:id="txta" layoutX="123.0" layoutY="163.0" />
+           <Label layoutX="29.0" layoutY="23.0" text="Nom : " />
+           <Label layoutX="26.0" layoutY="68.0" text="Surface:" />
+           <Label layoutX="21.0" layoutY="124.0" text="Adresse : " />
+           <Label layoutX="25.0" layoutY="173.0" text="Image : " />
+           <TextField fx:id="txtn" layoutX="101.0" layoutY="19.0" style="-fx-background-radius: 20;" />
+           <TextField fx:id="txtp" layoutX="101.0" layoutY="64.0" style="-fx-background-radius: 20;" />
+           <TextField fx:id="txta" layoutX="101.0" layoutY="112.0" style="-fx-background-radius: 20;" />
            
             
-           <TextField fx:id="URLImage" layoutX="123.0" layoutY="190.0" />
+           <TextField fx:id="URLImage" layoutX="101.0" layoutY="161.0" style="-fx-background-radius: 20;" />
+            <Button layoutX="21.0" layoutY="210.0" mnemonicParsing="false" onAction="#AddImage" prefHeight="32.0" prefWidth="94.0" styleClass="chosen-fruit-card" text="addimage">
+               <stylesheets>
+                  <URL value="@fullpackstyling.css" />
+                  <URL value="@adminaddcompetition.css" />
+               </stylesheets>
+            </Button>
         </children>
     </Pane>
            
     
      
-     <TableView fx:id="ArenaTable" layoutX="548.0" layoutY="190.0" onMouseClicked="#getData" prefHeight="188.0" prefWidth="461.0">
+     <TableView fx:id="ArenaTable" layoutX="266.0" layoutY="300.0" onMouseClicked="#getData" prefHeight="188.0" prefWidth="461.0" style="-fx-background-color: white;">
           <columns>
             <TableColumn fx:id="nameCol" prefWidth="137.0" text="C1" />
             <TableColumn fx:id="surfCol" prefWidth="122.0" text="C2" />
@@ -39,20 +48,41 @@
             <TableColumn fx:id="imgCol" prefWidth="75.0" text="Column " />
          </columns>
       </TableView>
-      <Button layoutX="361.0" layoutY="277.0" mnemonicParsing="false" onAction="#ajouter" prefHeight="42.0" prefWidth="101.0" text="Ajouter" />
-      <Button layoutX="685.0" layoutY="398.0" mnemonicParsing="false" onAction="#Modify" prefHeight="42.0" prefWidth="122.0" text="Modifier" />
-      <Button layoutX="853.0" layoutY="397.0" mnemonicParsing="false" onAction="#SupprimerA" prefHeight="42.0" prefWidth="122.0" text="Supprimer" />
-      <VBox layoutX="1.0" prefHeight="509.0" prefWidth="193.0" style="-fx-background-color: #27436B;">
+      <Button layoutX="519.0" layoutY="22.0" mnemonicParsing="false" onAction="#ajouter" prefHeight="42.0" prefWidth="101.0" styleClass="chosen-fruit-card" text="Ajouter" />
+      <Button layoutX="326.0" layoutY="511.0" mnemonicParsing="false" onAction="#Modify" prefHeight="42.0" prefWidth="122.0" styleClass="add-btn1" text="Modifier" />
+      <Button layoutX="472.0" layoutY="511.0" mnemonicParsing="false" onAction="#SupprimerA" prefHeight="42.0" prefWidth="122.0" styleClass="add-btn1" text="Supprimer" />
+      <VBox layoutX="1.0" prefHeight="600.0" prefWidth="193.0" styleClass="right-bar">
          <children>
                     <Button fx:id="btnf" mnemonicParsing="false" onAction="#handleButtonClicks" prefHeight="37.0" prefWidth="193.0" text="Ajouter Arene" />
                   <Button fx:id="btnArena" mnemonicParsing="false" onAction="#handleButtonClicks" prefHeight="34.0" prefWidth="193.0" text="Gestion Arene" />
              <Button fx:id="btnCours" mnemonicParsing="false" onAction="#handleButtonClicks" prefHeight="35.0" prefWidth="193.0" text="Gestion Cours" />
                   <Button fx:id="btnl" mnemonicParsing="false" onAction="#handleButtonClicks" prefHeight="33.0" prefWidth="193.0" text="Lister Cours" />
                   <Button fx:id="btnx" mnemonicParsing="false" onAction="#handleButtonClicks" prefHeight="33.0" prefWidth="192.0" text="Accueil" />
-         </children></VBox>
-      <ImageView fx:id="Imagex" fitHeight="150.0" fitWidth="200.0" layoutX="307.0" layoutY="344.0" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="218.0" layoutY="278.0" mnemonicParsing="false" onAction="#AddImage" prefHeight="32.0" prefWidth="94.0" text="addimage" />
-      <Button layoutX="522.0" layoutY="390.0" mnemonicParsing="false" onAction="#RefreshA" prefHeight="45.0" prefWidth="83.0" text="Actualiser" />
-      <TextField fx:id="Recherchew" layoutX="743.0" layoutY="147.0" onKeyReleased="#RechercheY" prefHeight="26.0" prefWidth="240.0" promptText="SEARCH" style="-fx-background-color: white;" />
+         </children>
+         <stylesheets>
+            <URL value="@fullpackstyling.css" />
+            <URL value="@adminaddcompetition.css" />
+         </stylesheets></VBox>
+      <ImageView fx:id="Imagex" fitHeight="149.0" fitWidth="162.0" layoutX="513.0" layoutY="87.0" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="224.0" layoutY="509.0" mnemonicParsing="false" onAction="#RefreshA" prefHeight="45.0" prefWidth="83.0" styleClass="add-btn1" text="Actualiser" />
+      <TextField fx:id="Recherchew" layoutX="513.0" layoutY="252.0" onKeyReleased="#RechercheY" prefHeight="26.0" prefWidth="240.0" promptText="SEARCH" style="-fx-background-color: white; -fx-background-radius: 20;" />
+      <Pane layoutX="519.0" layoutY="82.0" prefHeight="76.0" prefWidth="277.0" style="-fx-background-radius: 20 20 0 0;" styleClass="linear-grad" stylesheets="@fullpackstyling.css">
+         <children>
+            <Label layoutX="21.0" layoutY="14.0" text="Admin" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="76.0" fitWidth="59.0" layoutX="217.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@IMG/coach.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
     </children>
+   <stylesheets>
+      <URL value="@fullpackstyling.css" />
+      <URL value="@adminaddcompetition.css" />
+   </stylesheets>
 </AnchorPane>
