--- a/src/GUI/ModifEquipe.fxml
+++ b/src/GUI/ModifEquipe.fxml
@@ -1,30 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.ModifEquipeController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="800.0" styleClass="right-bar" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.ModifEquipeController">
     <children>
-      <Label layoutX="64.0" layoutY="150.0" text="nombre joueurs:" />
-      <Label layoutX="124.0" layoutY="123.0" text="nom:" />
-      <Label layoutX="111.0" layoutY="174.0" text="origine:" />
-      <Label layoutX="138.0" layoutY="97.0" text="id:" />
-      <ImageView fx:id="image" fitHeight="150.0" fitWidth="200.0" layoutX="386.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true" />
-      <Label fx:id="id" layoutX="188.0" layoutY="97.0" text="Label" />
-      <Label layoutX="108.0" layoutY="33.0" text="modifier equipe">
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font></Label>
-      <Button fx:id="chooseImg" layoutX="436.0" layoutY="38.0" mnemonicParsing="false" onAction="#chooseImage" text="importer image" />
-      <TextField fx:id="txtnom" layoutX="189.0" layoutY="119.0" />
-      <TextField fx:id="txtprenom" layoutX="189.0" layoutY="146.0" />
-      <TextField fx:id="txtemail" layoutX="189.0" layoutY="170.0" />
-      <Button fx:id="btnSave" layoutX="274.0" layoutY="304.0" mnemonicParsing="false" onAction="#onClickSave" text="Save" />
-      <HBox fx:id="ratingPane" layoutX="376.0" layoutY="225.0" prefHeight="100.0" prefWidth="200.0" />
+      <AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-radius: 70;" styleClass="linear-grad">
+         <stylesheets>
+            <URL value="@fullpackstyling.css" />
+            <URL value="@adminaddcompetition.css" />
+         </stylesheets>
+         <children>
+            <AnchorPane layoutX="234.0" layoutY="110.0" prefHeight="429.0" prefWidth="455.0" style="-fx-background-radius: 20;" styleClass="right-bar">
+               <children>
+                  <TextField fx:id="txtnom" layoutX="100.0" layoutY="85.0" style="-fx-background-radius: 20;" />
+                  <HBox fx:id="ratingPane" layoutX="179.0" layoutY="315.0" prefHeight="100.0" prefWidth="200.0" />
+                  <Button fx:id="chooseImg" layoutX="300.0" layoutY="85.0" mnemonicParsing="false" onAction="#chooseImage" styleClass="add-btn1" text="importer image" />
+                  <TextField fx:id="txtemail" layoutX="100.0" layoutY="166.0" style="-fx-background-radius: 20;" />
+                  <ImageView fx:id="image" fitHeight="148.0" fitWidth="159.0" layoutX="282.0" layoutY="155.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label layoutX="32.0" layoutY="38.0" text="id:" textFill="WHITE" />
+                  <TextField fx:id="txtprenom" layoutX="100.0" layoutY="127.0" style="-fx-background-radius: 20;" />
+                  <Label layoutX="22.0" layoutY="80.0" text="nom:" textFill="WHITE" />
+                  <Label fx:id="id" layoutX="131.0" layoutY="42.0" text="Label" textFill="WHITE" />
+                  <Button fx:id="btnSave" layoutX="164.0" layoutY="209.0" mnemonicParsing="false" onAction="#onClickSave" styleClass="add-btn1" text="Save" />
+                  <Label layoutX="6.0" layoutY="131.0" text="nombre joueurs:" textFill="WHITE" />
+                  <Label layoutX="23.0" layoutY="174.0" text="origine:" textFill="WHITE" />
+               </children>
+            </AnchorPane>
+            <Pane layoutX="440.0" layoutY="34.0" prefHeight="76.0" prefWidth="277.0" style="-fx-background-radius: 20 20 0 0;" styleClass="linear-grad" stylesheets="@fullpackstyling.css">
+               <children>
+                  <Label layoutX="21.0" layoutY="14.0" text="Admin" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="76.0" fitWidth="59.0" layoutX="217.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@IMG/coach.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Pane layoutX="212.0" layoutY="79.0" prefHeight="31.0" prefWidth="228.0" style="-fx-background-radius: 20 20 0 0;" styleClass="linear-grad" stylesheets="@fullpackstyling.css">
+               <children>
+                  <Label layoutX="22.0" layoutY="4.0" prefHeight="27.0" prefWidth="200.0" text="modifier equipe" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+            <AnchorPane prefHeight="600.0" prefWidth="200.0" styleClass="right-bar" />
+         </children>
+      </AnchorPane>
    </children>
+   <stylesheets>
+      <URL value="@fullpackstyling.css" />
+      <URL value="@adminaddcompetition.css" />
+   </stylesheets>
 </AnchorPane>
